# dotfiles

./: .gitignore  README.md  install.sh
claude/: CLAUDE.md  README.md  pyproject.toml
claude/commands/: debug.md  scan.md  screenshot.md  search.md  trace.md
claude/mcp/: servers.toml
claude/projects/_base/: README.md
claude/projects/_base/.claude/rules/engineering/: approach.md  database.md  error-handling.md  security.md  workflow.md
claude/projects/overrides/jeevy_portal/: README.md
claude/projects/overrides/jeevy_portal/.claude/: settings.json
claude/projects/overrides/jeevy_portal/.claude/commands/: create-study-guide.md  find.md  reindex-seance.md  review.md  sync-all-feature-claude-md.md  test.md  trace.md  update-architecture.md  update-feature-claude-md.md  update-scarlet-docs.md
claude/projects/overrides/jeevy_portal/.claude/hooks/: session-start-context.sh
claude/projects/overrides/jeevy_portal/.claude/rules/: agents.md  backend.md  context.md  environment.md  frontend-auth.md  frontend-styling.md  frontend.md  guardrails.md
claude/rules/: api-design.md  database.md  debugging.md  performance.md  seance.md  specter.md  workflow.md
claude/rules/engineering/: api-design.md  conventions.md  dependencies.md  testing.md
claude/rules/mcp/: scarlet.md
claude/rules/personal/: approach.md
claude/src/tool/: __init__.py  cli.py  config.py  doctor.py  mcp_ops.py  paths.py  project_ops.py  sync.py
kitty/: kitty.conf  kitty.conf.spacegrey.bak
nvim/: lazyvim.json
nvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  (+1 more)
nvim/styles/: markdown.css
(+11 files in other folders)
