[project]
name = "tool"
version = "0.1.0"
description = "Personal Claude/Cursor workstation orchestration CLI."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
tool = "tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tool"]

[tool.black]
line-length = 100
target-version = ["py312"]
